add logic symbols for org notes

--- a/config.org
+++ b/config.org
@@ -425,6 +425,9 @@ Custom mappings from LaTeX code to characters:
                             ("bot" "\\bot" nil "" "" "" "⊥")
                             ("box" "$\\box$" nil "" "" "" "□")
                             ("diamond" "$\\diamond$" nil "" "" "" "◇")
+                            ("Box" "$\\Box$" nil "" "" "" "□")
+                            ("Diamond" "$\Diamond$" nil "" "" "" "◇")
+                            ("models" "$\\models$" nil "" "" "" "⊨")
                             )
         )
   )
