--- a/config.org
+++ b/config.org
@@ -233,7 +233,6 @@ Basic config:
 (use-package! org-agenda
   :init
   (map! "<f1>"'(lambda (&optional arg) (interactive) (org-agenda arg " ")))
-  (map! "<f2>"'(lambda (&optional arg) (interactive) (org-agenda arg "w")))
   (setq org-agenda-skip-scheduled-if-done t
         org-agenda-skip-deadline-if-done t
         org-agenda-include-deadlines t
@@ -247,7 +246,7 @@ Basic config:
   )
 #+end_src
 
-Show birthdays in agenda:
+Show birthdays:
 
 #+begin_src emacs-lisp :tangle yes
 (use-package! org-contacts
@@ -302,16 +301,6 @@ My custom agenda views:
                             ;;        :order 5)
                             (:discard (:anything t))))))))
                             ;; (:discard (:not (:todo "TODO")))))))))
-          ("w" "This week"
-           ((agenda "" ((org-agenda-span 'week)
-                        (org-agenda-start-on-weekday 1)
-                        (org-agenda-overriding-header "Week Agenda\n")
-                        (org-agenda-block-separator " ")
-                        (org-super-agenda-groups
-                         '((:name " " :time-grid t :date today :order 1)
-                          ;; catch "Other Items", e.g. scheduled yesterday:
-                          (:name " " :date t :order 2)
-                          ))))))
             ))
 
   (custom-set-faces!
@@ -320,6 +309,85 @@ My custom agenda views:
   :config
   (org-super-agenda-mode)
   )
+#+end_src
+
+** Calendar
+
+#+begin_src emacs-lisp :tangle yes
+(use-package! calfw
+  :after org
+  :init
+  (map! "<f2>"'(lambda (&optional arg) (interactive) (cfw:open-org-calendar)))
+  (setq cfw:render-line-breaker 'cfw:render-line-breaker-wordwrap) ; doesn't seem to work
+  (setq calendar-week-start-day 1)
+  )
+#+end_src
+
+Display UK bank holidays only (from https://emacs.stackexchange.com/questions/44851/uk-holidays-definitions):
+
+#+begin_src emacs-lisp :tangle yes
+(setq calendar-holidays
+      '((holiday-fixed 1 1 "New Year's Day")
+        (holiday-new-year-bank-holiday)
+        (holiday-fixed 2 14 "Valentine's Day")
+        (holiday-fixed 3 17 "St. Patrick's Day")
+        (holiday-fixed 4 1 "April Fools' Day")
+        (holiday-easter-etc -47 "Shrove Tuesday")
+        (holiday-easter-etc -21 "Mother's Day")
+        (holiday-easter-etc -2 "Good Friday")
+        (holiday-easter-etc 0 "Easter Sunday")
+        (holiday-easter-etc 1 "Easter Monday")
+        (holiday-float 5 1 1 "Early May Bank Holiday")
+        (holiday-float 5 1 -1 "Spring Bank Holiday")
+        (holiday-float 6 0 3 "Father's Day")
+        (holiday-float 8 1 -1 "Summer Bank Holiday")
+        (holiday-fixed 10 31 "Halloween")
+        (holiday-fixed 12 24 "Christmas Eve")
+        (holiday-fixed 12 25 "Christmas Day")
+        (holiday-fixed 12 26 "Boxing Day")
+        (holiday-christmas-bank-holidays)
+        (holiday-fixed 12 31 "New Year's Eve")))
+;; N.B. It is assumed that 1 January is defined with holiday-fixed -
+;; this function only returns any extra bank holiday that is allocated
+;; (if any) to compensate for New Year's Day falling on a weekend.
+;;
+;; Where 1 January falls on a weekend, the following Monday is a bank
+;; holiday.
+(defun holiday-new-year-bank-holiday ()
+  (let ((m displayed-month)
+        (y displayed-year))
+    (calendar-increment-month m y 1)
+    (when (<= m 3)
+      (let ((d (calendar-day-of-week (list 1 1 y))))
+        (cond ((= d 6)
+                (list (list (list 1 3 y)
+                            "New Year's Day Bank Holiday")))
+              ((= d 0)
+                (list (list (list 1 2 y)
+                            "New Year's Day Bank Holiday"))))))))
+
+;; N.B. It is assumed that 25th and 26th are defined with holiday-fixed -
+;; this function only returns any extra bank holiday(s) that are
+;; allocated (if any) to compensate for Christmas Day and/or Boxing Day
+;; falling on a weekend.
+(defun holiday-christmas-bank-holidays ()
+  (let ((m displayed-month)
+        (y displayed-year))
+    (calendar-increment-month m y -1)
+    (when (>= m 10)
+      (let ((d (calendar-day-of-week (list 12 25 y))))
+        (cond ((= d 5)
+                (list (list (list 12 28 y)
+                            "Boxing Day Bank Holiday")))
+              ((= d 6)
+                (list (list (list 12 27 y)
+                            "Boxing Day Bank Holiday")
+                      (list (list 12 28 y)
+                            "Christmas Day Bank Holiday")))
+              ((= d 0)
+                (list (list (list 12 27 y)
+                            "Christmas Day Bank Holiday"))))))))
+
 #+end_src
 
 
